# CallCentreVoiceBot

./: README.md  pyproject.toml  requirements.txt  run_demo.py
docs/: implementation-checklist.md  production-readiness.md
scripts/: evaluate_models.py  load_test.py  quality_review.py  run_voice_console.py
src/callcentre_bot/: __init__.py  api.py  assistant.py  brain.py  config.py  db.py  dialog.py  flows.py  json_codec.py  knowledge.py  main.py  ml.py  models.py  nlu.py  observability.py  policy.py  rate_limit.py  sentiment.py  sip.py  storage.py  voice.py
src/callcentre_bot/data/: intent_samples.jsonl  intent_test.jsonl  intent_train.jsonl  intent_validation.jsonl  sentiment_samples.jsonl  sentiment_test.jsonl  sentiment_train.jsonl  sentiment_validation.jsonl
tests/: test_api.py  test_brain.py  test_chaos.py  test_multilingual.py  test_nlu.py  test_sip.py  test_voice.py  test_voice_console.py
