[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callcentrevoicebot"
version = "0.3.0"
description = "Production-oriented contact-center assistant service with in-house models"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
callcentre_bot = ["data/*.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
